# TaylorSwift

./: .gitignore  README.md  io.py  mkdocs.yml  plotting.py  pyproject.toml  validate_cospectra.py  validate_process_file.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: api.md  index.md  quickstart.md
examples/: cospectra_demo.ipynb  despike_demo.ipynb
src/TaylorSwift/: __init__.py  cleaning.py  compat.py  config.py  constants.py  core.py  corrections.py  cospectra.py  covariance.py  data_quality.py  despike.py  ec_polars.py  frame_utils.py  io.py  pipelines.py  plotting.py  qc.py  results.py  rotations.py  thermo.py  wind.py
src/eccospectra/: __init__.py  corrections.py  data_quality.py  ec_polars.py  qc.py
tests/: conftest.py  test_constants.py  test_core.py  test_corrections.py  test_data_quality.py  test_ec_polars.py  test_io.py  test_qc.py
