[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eccospectra"
version = "0.2.0"
description = "FFT-based (co)spectral analysis for eddy covariance time series"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["eddy covariance", "micrometeorology", "turbulence", "spectra", "flux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=0.19",
    "pandas>=1.5",
    "pyarrow",
    "KDEpy>=1.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Repository = "https://github.com/paultgriffiths/TaylorSwift"
Issues = "https://github.com/paultgriffiths/TaylorSwift/issues"

[tool.setuptools]
packages = ["TaylorSwift"]

[tool.setuptools.package-dir]
TaylorSwift = "src/TaylorSwift"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/TaylorSwift"]
